--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,6 @@ django-registration==1.0
 django-fsm>=1.3
 django-floppyforms>=1.0
 django-apptemplates>=0.0.1
-django-selectable>=0.5,<0.6
+django-selectable==0.2
 django_extensions
 cmsmenu_redirect
