--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
-include *.txt
-recursive-include docs *.txt
-recursive-include docs *.rst
+recursive-include signalbox ask twiliobox test example_project docs *
+prune *.pyc
