--- a/signalbox/example_project/CONFIG_OPTIONAL.json
+++ b/signalbox/example_project/CONFIG_OPTIONAL.json
@@ -7,6 +7,6 @@
 	"DATABASE_URL": "postgres://localhost/sbox",
 	"EMAIL_HOST": "localhost",
 	"EMAIL_PORT": 25,
-	"EMAIL_HOST_USER": 'XXX',
-	"EMAIL_HOST_PASSWORD": 'XXX'
+	"EMAIL_HOST_USER": "XXX",
+	"EMAIL_HOST_PASSWORD": "XXX"
 }	
