presentational and performance tweaks ability to rotate likert options tidying fronted; allow ad hoc askers as well as scripts
Tidying up for better packaging and install on heroku
Factored out example app.
Using djstatic

Removed instruments.
Tidied and updated dependencies list.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,42 @@
-Django>=1.5,<1.6
-Markdown>=2.2.1
-South>=0.8
+gunicorn
+psycopg2
+Markdown
+South
+statlib
+python-magic
+twilio
+django-floppyforms
+django_extensions # for timestamped  model mixin
+cmsmenu_redirect
+Pillow
+django-localflavor
+pyyaml
+django-yamlfield
+pycontracts
+shortuuid
+dj-static
+django-secure
+django-smtp-ssl
+dj-database-url
+envoy
+python-dateutil
+django-admin-bootstrapped==0.3.2
+django-bootstrap-pagination==0.1.10
+django-apptemplates>=0.0.1
+django-selectable==0.2
 boto==2.9.8
-django-cms==2.4.1
-django-mptt==0.5.2
-django-compressor==1.3
-django-sekizai==0.7
 django-reversion>=1.6.6,<1.7
-django-jsonfield>=0.8.10
-django-phonenumber-field>=0.2a3
+django-jsonfield==0.8.10
 phonenumbers==5.8b1
-parsedatetime>=1.1.2
-pyparsing>=1.5.6,<2.0
-statlib>=1
-python-magic==0.4.3
-twilio>=3
+django-phonenumber-field>=0.2a3
+parsedatetime==1.1.2
+pyparsing==1.5.6
 django-tastypie==0.9.15
-python-dateutil==2.1
 django-admin-tools==0.4.0
 cmsplugin-simple-markdown==1.2
 django-kronos==0.3
-envoy>=0.0.2
 django-registration==1.0
 django-fsm>=1.3
-django-floppyforms>=1.0
-django-apptemplates>=0.0.1
-django-selectable==0.2
-django_extensions
-cmsmenu_redirect
-django-absolute>=0.3
-Pillow==1.7.8
-django-admin-bootstrapped==0.3.2
-django-bootstrap-pagination==0.1.10
-django-data-exports==0.2
-django-localflavor
-pyyaml
-pycontracts
-django-yamlfield
-shortuuid
+Django>=1.5,<1.6
+django-compressor==1.3
+django-sekizai==0.7
