--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,33 @@
-gunicorn
-psycopg2
-Markdown
-South
-statlib
-python-magic
-twilio
-django-floppyforms
-Pillow
-django-localflavor
-pyyaml
-django-yamlfield
-pycontracts
-shortuuid
-django-shortuuidfield
-dj-static
-django-secure
-django-smtp-ssl
-dj-database-url
-envoy
-python-dateutil
-django-admin-bootstrapped==0.3.2
-django-bootstrap-pagination==0.1.10
-django-apptemplates>=0.0.1
-django-selectable==0.2
-boto==2.9.8
-django-reversion>=1.6.6,<1.7
-django-jsonfield==0.8.10
-phonenumbers==5.8b1
-django-phonenumber-field>=0.2a3
-parsedatetime==1.1.2
-pyparsing==1.5.6
-django-tastypie==0.9.15
-django-admin-tools==0.4.0
-cmsplugin-simple-markdown==1.2
-django-registration==1.0
-django-fsm>=1.3
 Django>=1.5,<1.6
-django-compressor==1.3
+Markdown==2.3.1
+Pillow==1.7.8
+South==0.8.2
+cmsplugin-simple-markdown==1.2
+django-admin-bootstrapped==0.3.2
+django-admin-tools==0.4.0
+django-apptemplates>=0.0.1
+django-bootstrap-pagination==0.1.10
+django-floppyforms==1.1
+django-fsm==1.5.0
+django-jsonfield==0.8.10
+django-localflavor==1.0
+django-phonenumber-field>=0.2a3
+django-registration==1.0
+django-reversion>=1.6.6,<1.7
+django-secure==0.1.2
 django-sekizai==0.7
+django-selectable==0.2
+django-shortuuidfield>=0.1.2
+django-tastypie==0.9.15
+django-yamlfield>=0.5
+envoy>=0.0.2
+parsedatetime==1.1.2
+phonenumbers==5.8b1
+PyContracts==1.6.0
+pyparsing==1.5.6
+python-dateutil==2.1
+python-magic>=0.4.3
+PyYAML>=3.10
+shortuuid>=0.4
+statlib>=1.1
+twilio>=3.6.3
