--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e https://www.djangoproject.com/download/1.7.b4/tarball/
+-e git+https://github.com/django/django.git@1.7b4#egg=django
 Markdown==2.3.1
 Pillow==2.3.1
 South==0.8.2
