admin changes; updagin jquery ui images

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Markdown==2.3.1
 Pillow==2.3.1
 South==0.8.2
 cmsplugin-simple-markdown==1.2
-django-admin-bootstrapped==0.3.2
+django-admin-bootstrapped==0.6.5
 django-admin-tools==0.4.0
 django-apptemplates>=0.0.1
 django-bootstrap-pagination==0.1.10
@@ -34,3 +34,4 @@ docutils==0.11
 pandas>=0.13
 openpyxl==1.8.6
 django-braces==1.4.0
+babel==1.3
