--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/django/django.git@1.7b4#egg=django
+-e git+https://github.com/django/django.git@1.7b4#egg=django==1.7b4
 -e hg+ssh://hg@bitbucket.org/puterleat/django-registration#egg=django-registration
 Markdown==2.3.1
 Pillow==2.3.1
