--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ PyYAML>=3.10
 shortuuid>=0.4
 twilio>=3.6.3
 docutils==0.11
-#pandas>=0.13
+pandas>=0.13
 openpyxl==1.8.6
 django-braces==1.4.0
 babel==1.3
