--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ JB :
   analytics :
     provider : google
     google :
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-38231989-2'
     # getclicky :
     #   site_id :
     # mixpanel :
