--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,37 @@
 Markdown==2.3.1
 Pillow==2.3.1
 South==0.8.2
-django-admin-bootstrapped==1.6.5
-django-admin-tools==0.4.0
+django-admin-bootstrapped==2.5
+django-admin-tools==0.7.0
 django-apptemplates>=0.0.1
-django-bootstrap-pagination==0.1.10
-django-floppyforms==1.1
+django-bootstrap-pagination==1.5.1
+django-floppyforms==1.5.2
 django-fsm==1.5.0
-django-jsonfield>=0.8.10
+# deprecated now
+django-jsonfield==0.8.10
+# to use from now on
+jsonfield-1.0.3
 django-localflavor==1.0
 django-phonenumber-field>=0.2a3
-django-reversion>=1.8
-django-secure==0.1.2
-django-sekizai==0.7
+django-reversion==1.9.3
+django-sekizai==0.8.2
 django-selectable==0.8
 django-shortuuidfield>=0.1.2
 django-tastypie==0.9.15
 django-yamlfield>=0.5
-envoy>=0.0.2
+envoy==0.0.3
 parsedatetime==1.1.2
 phonenumbers==5.8b1
-PyContracts==1.6.0
+PyContracts==1.7.8
 pyparsing==1.5.6
 python-dateutil==2.1
 python-magic>=0.4.3
 PyYAML>=3.10
 shortuuid>=0.4
-twilio==3.6.7
+twilio==4.9.0
 docutils==0.11
 pandas>=0.13
-openpyxl==1.8.6
-django-braces==1.4.0
+django-braces==1.8.1
 babel==1.3
 django-menus==1.1.2
+django-formtools==1.0
