--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-fsm==1.5.0
 # deprecated now
 django-jsonfield==0.8.10
 # to use from now on
-jsonfield-1.0.3
+jsonfield==1.0.3
 django-localflavor==1.0
 django-phonenumber-field>=0.2a3
 django-reversion==1.9.3
