--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-admin-bootstrapped==2.5
 django-admin-tools==0.7.0
 django-apptemplates>=0.0.1
 django-bootstrap-pagination==1.5.1
-django-floppyforms==1.5.2
+django-floppyforms==1.6.0
 django-fsm==1.5.0
 django-jsonfield==0.9.15
 django-localflavor==1.0
@@ -18,9 +18,9 @@ django-tastypie==0.12.2
 django-yamlfield>=0.5
 envoy==0.0.3
 parsedatetime==1.1.2
-phonenumbers==5.8b1
+phonenumbers==7.2.2
 PyContracts==1.7.8
-pyparsing==1.5.6
+pyparsing==2.0.6
 python-dateutil==2.1
 python-magic>=0.4.3
 PyYAML>=3.10
