--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,4 @@ django-mathfilters==0.3.0
 djangorestframework
 django-debug-toolbar
 Cython==0.24.1
-feather-format==0.3.0
+#feather-format==0.3.0
