fixes for django 1.10

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
 Markdown==2.3.1
 Pillow==2.3.1
 South==0.8.2
-django-admin-bootstrapped==2.5
+-e git+git://github.com/hellpanderrr/django-admin-bootstrapped-1.9-compatible.git@master#egg=django_admin_bootstrapped
+
 django-admin-tools==0.7.0
 django-apptemplates>=0.0.1
 django-bootstrap-pagination==1.5.1
 django-floppyforms==1.6.0
 django-fsm==1.5.0
-django-jsonfield==0.9.15
+django-jsonfield==1.0.1
 django-localflavor==1.0
-django-phonenumber-field>=0.2a3
-django-reversion==1.9.3
-django-sekizai==0.8.2
+django-phonenumber-field==1.1.0
+django-reversion==2.0.6
+django-sekizai==0.10.0
 django-selectable==0.9
 django-shortuuidfield>=0.1.2
-django-tastypie==0.12.2
+django-tastypie==0.13.3
 django-yamlfield>=0.5
 envoy==0.0.3
 parsedatetime==1.1.2
 phonenumbers==7.2.2
 PyContracts==1.7.8
 pyparsing==2.0.6
-python-dateutil==2.1
+python-dateutil==2.5.3
 python-magic>=0.4.3
 PyYAML>=3.10
 shortuuid>=0.4
